[package]
name = "yaa"
description = "Yandex archives analyzer tool"
authors = ["egoroff <egoroff@gmail.com>"]
version = "0.1.0"
keywords = ["yandex", "tool", "sources", "analyze"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.39"
bzip2 = "0.4.4"
num-format = "0.4"
indicatif = "0.17.5"
itertools = "0.11"
prettytable-rs = "0.10.0"
clap = { version = "4.3.19", features = ["std", "color", "suggestions", "cargo", "derive"] }
phf = { version = "0.11.2", features = ["macros"] }
color-eyre = "0.6.2"

[profile.release]
codegen-units = 1
strip = true
panic = 'abort'