[package]
name = "yaa"
description = "Yandex archives analyzer tool"
authors = ["egoroff <egoroff@gmail.com>"]
version = "0.1.0"
keywords = ["yandex", "tool", "sources", "analyze"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.44"
bzip2 = "0.6.1"
num-format = "0.4"
indicatif = "0.18.3"
itertools = "0.14.0"
clap = { version = "4.5.53", features = [
    "std",
    "color",
    "suggestions",
    "cargo",
    "derive",
] }
phf = { version = "0.13.1", features = ["macros"] }
color-eyre = "0.6.5"
comfy-table = "7.2.1"

[profile.release]
codegen-units = 1
strip = true
panic = 'abort'
